updated html and js

--- a/index.html
+++ b/index.html
@@ -1,34 +1,12 @@
 <!doctype html>
 
-<html lang="en">
+<html>
  <head>
-  <meta charset="utf-8">
-  <link type="text/css" rel="stylesheet" href="styles.css">  <!-- Verify Link -->
   <script type="text/javascript" src="client.js"></script>  <!-- Verify Link -->
-  <script src="jquery.js"></script>
-  <script src="application.js"></script>
-  <title>Week 1 Array Assignment</title>
+    <title>Week 1 Array Assignment</title>
  </head>
 
  <body>
-   <header>
-     <h1>Arrays</h1>
-   </header>
-
-   <nav>
-   </nav>
-
-   <aside class="">  <!--Name Attribute-->
-   </aside>
-
-   <article class="">  <!--Name Attribute-->
-   </article>
-
-   <main>
-   </main>
-
-   <footer>
-   </footer>
-
+  <h1>Arrays</h1>
  </body>
 </html>
